[REFACTOR] Added reaction ratio bar in video page

--- a/src/assets/styles/abstracts/_variables.scss
+++ b/src/assets/styles/abstracts/_variables.scss
@@ -3,6 +3,7 @@ $mobile-break-point: 950px;
 // App color pallet
 $color-primary: #576766;
 $color-primary-200: #3f4645;
+$color-secondary: #52e2ce;
 $color-accent: #eaeff0;
 $color-accent-200: #dfe7e8;
 $color-accent-400: #cfdadb;
